# oda-wd-client

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  pyproject.toml
.github/actions/setup-project/: action.yml
.github/workflows/: release.yml  semgrep.yaml
oda_wd_client/base/: api.py  logging.py  tools.py  types.py  utils.py
oda_wd_client/service/financial_management/: api.py  types.py  utils.py
oda_wd_client/service/human_resources/: api.py  utils.py
oda_wd_client/service/resource_management/: api.py  types.py  utils.py
oda_wd_client/service/staffing/: api.py  types.py
oda_wd_client/types/: financial_management.py  resource_management.py
