[tool.poetry]
name = "oda-wd-client"
version = "0.0.0"
description = "A library for interacting with Workday from Python"
authors = [
    "Karl Fredrik Haugland <karlfredrik.haugland@oda.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = ">=1.10.0,<2.0"
suds = "^1.1.2"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
pylint = "^2.12"
flake8 = "^4.0"
mypy = "^0.910"
black = "^22.8.0"

[tool.black]
target_version = ['py310', 'py311']
include = '\.pyi?$'
safe = true
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
group_by_package = true
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
ignore_missing_imports = true
